CONF-files/iptables-minibian.rules
# Generated by iptables-save v1.4.21 on Tue Feb  2 13:02:07 2016
*nat
:PREROUTING ACCEPT [48793:4456024]
:INPUT ACCEPT [21:1516]
:OUTPUT ACCEPT [2060:150934]
:POSTROUTING ACCEPT [1396:100438]
-A POSTROUTING -s 192.168.1.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Tue Feb  2 13:02:07 2016
# Generated by iptables-save v1.4.21 on Tue Feb  2 13:02:07 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [3007:804181]
:logdrop - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j logdrop
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 25/min -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j logdrop
-A FORWARD -m state --state INVALID -j logdrop
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.1.0/24 -d 192.168.10.3/32 -j logdrop
-A FORWARD -s 192.168.1.0/24 -p udp -j ACCEPT
-A FORWARD -s 192.168.1.0/24 -p tcp -j ACCEPT
-A logdrop -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "[BLOCK] "
-A logdrop -j DROP
COMMIT
# Completed on Tue Feb  2 13:02:07 2016
